--- a/DB_Connection_test.xaml
+++ b/DB_Connection_test.xaml
@@ -1,9 +1,9 @@
-<Activity mc:Ignorable="sap sap2010" x:Class="TestCase" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:s="clr-namespace:System;assembly=System.Private.CoreLib" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=System.Private.CoreLib" xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=System.Private.CoreLib" xmlns:sd="clr-namespace:System.Data;assembly=System.Data.Common" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<Activity mc:Ignorable="sap sap2010" x:Class="TestCase" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:s="clr-namespace:System;assembly=System.Private.CoreLib" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=System.Private.CoreLib" xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=System.Private.CoreLib" xmlns:sd="clr-namespace:System.Data;assembly=System.Data.Common" xmlns:uast="clr-namespace:UiPath.Activities.System.Text;assembly=UiPath.System.Activities" xmlns:ucat="clr-namespace:UiPath.Core.Activities.TextModifications;assembly=UiPath.System.Activities" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <x:Members>
     <x:Property Name="BreakTriggerScopeInArgument" Type="InArgument(x:String)" />
   </x:Members>
   <sap2010:ExpressionActivityEditor.ExpressionActivityEditor>C#</sap2010:ExpressionActivityEditor.ExpressionActivityEditor>
-  <sap:VirtualizedContainerService.HintSize>490,2967</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>1022,3895</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>TestCase_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <sco:Collection x:TypeArguments="x:String">
@@ -42,6 +42,10 @@
       <x:String>UiPath.Database.Activities</x:String>
       <x:String>MongoDB.Bson</x:String>
       <x:String>MongoDB.Driver</x:String>
+      <x:String>UiPath.Activities.System.Text</x:String>
+      <x:String>UiPath.Shared.Activities</x:String>
+      <x:String>UiPath.Core.Activities.TextModifications</x:String>
+      <x:String>UiPath.Activities.System.Workflow.Business</x:String>
     </sco:Collection>
   </TextExpression.NamespacesForImplementation>
   <TextExpression.ReferencesForImplementation>
@@ -97,6 +101,22 @@
       <AssemblyReference>UiPath.UiAutomation.Activities</AssemblyReference>
       <AssemblyReference>UiPath.Workflow</AssemblyReference>
       <AssemblyReference>WindowsBase</AssemblyReference>
+      <AssemblyReference>DnsClient</AssemblyReference>
+      <AssemblyReference>System.Linq.Async</AssemblyReference>
+      <AssemblyReference>System.Linq.Async.Queryable</AssemblyReference>
+      <AssemblyReference>System.Linq.Expressions</AssemblyReference>
+      <AssemblyReference>System.Linq.Parallel</AssemblyReference>
+      <AssemblyReference>System.Collections.Immutable</AssemblyReference>
+      <AssemblyReference>System.Linq.Queryable</AssemblyReference>
+      <AssemblyReference>System.Memory.Data</AssemblyReference>
+      <AssemblyReference>InternalLabs.MongoDB.Activities</AssemblyReference>
+      <AssemblyReference>UiPath.Excel.Activities</AssemblyReference>
+      <AssemblyReference>UiPath.GSuite.Activities</AssemblyReference>
+      <AssemblyReference>UiPath.Mail.Activities</AssemblyReference>
+      <AssemblyReference>UiPath.Testing.Activities</AssemblyReference>
+      <AssemblyReference>UiPath.OCR.Activities</AssemblyReference>
+      <AssemblyReference>UiPath.UIAutomationCore</AssemblyReference>
+      <AssemblyReference>UiPath.Web.Activities</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
   <sap2010:WorkflowViewState.ViewStateManager>
@@ -169,7 +189,7 @@
       <sap2010:ViewStateData sap:VirtualizedContainerService.HintSize="700,2762" Id="TestCase_1" />
     </sap2010:ViewStateManager>
   </sap2010:WorkflowViewState.ViewStateManager>
-  <Sequence sap:VirtualizedContainerService.HintSize="500,2902" sap2010:WorkflowViewState.IdRef="Sequence_5">
+  <Sequence sap:VirtualizedContainerService.HintSize="1032,3830" sap2010:WorkflowViewState.IdRef="Sequence_5">
     <Sequence.Variables>
       <Variable x:TypeArguments="sd:DataTable" Name="count" />
       <Variable x:TypeArguments="ui:DatabaseConnection" Name="connect" />
@@ -179,20 +199,21 @@
           <CSharpValue x:TypeArguments="sd:DataTable" sap2010:WorkflowViewState.IdRef="CSharpValue`1_40">null</CSharpValue>
         </Variable.Default>
       </Variable>
+      <Variable x:TypeArguments="scg:IEnumerable(x:String)" Name="test2" />
     </Sequence.Variables>
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <ui:DatabaseConnect DisplayName="Connect to database" sap:VirtualizedContainerService.HintSize="438,60" sap2010:WorkflowViewState.IdRef="DatabaseConnect_1" ProviderName="Microsoft.Data.SqlClient" ConnectionString="Data Source=10.16.17.179;Initial Catalog=ZephyrEnvironments;Persist Security Info=True;User ID=sa;Password=platinum_50;Encrypt=False">
+    <ui:DatabaseConnect DisplayName="Connect to database" sap:VirtualizedContainerService.HintSize="970,60" sap2010:WorkflowViewState.IdRef="DatabaseConnect_1" ProviderName="Microsoft.Data.SqlClient" ConnectionString="Data Source=10.16.17.179;Initial Catalog=ZephyrEnvironments;Persist Security Info=True;User ID=sa;Password=platinum_50;Encrypt=False">
       <ui:DatabaseConnect.DatabaseConnection>
         <OutArgument x:TypeArguments="ui:DatabaseConnection">
           <CSharpReference x:TypeArguments="ui:DatabaseConnection" sap2010:WorkflowViewState.IdRef="CSharpReference`1_2">connect</CSharpReference>
         </OutArgument>
       </ui:DatabaseConnect.DatabaseConnection>
     </ui:DatabaseConnect>
-    <ui:ExecuteQuery ContinueOnError="{x:Null}" TimeoutMS="{x:Null}" CommandType="Text" DisplayName="Run query" sap:VirtualizedContainerService.HintSize="438,89" sap2010:WorkflowViewState.IdRef="ExecuteQuery_1" Sql="select * from sys.tables">
+    <ui:ExecuteQuery ContinueOnError="{x:Null}" TimeoutMS="{x:Null}" CommandType="Text" DisplayName="Run query" sap:VirtualizedContainerService.HintSize="970,89" sap2010:WorkflowViewState.IdRef="ExecuteQuery_1" Sql="select * from sys.tables">
       <ui:ExecuteQuery.DataTable>
         <OutArgument x:TypeArguments="sd:DataTable">
           <CSharpReference x:TypeArguments="sd:DataTable" sap2010:WorkflowViewState.IdRef="CSharpReference`1_1">count</CSharpReference>
@@ -207,7 +228,7 @@
         <scg:Dictionary x:TypeArguments="x:String, Argument" />
       </ui:ExecuteQuery.Parameters>
     </ui:ExecuteQuery>
-    <If sap:VirtualizedContainerService.HintSize="438,640" sap2010:WorkflowViewState.IdRef="If_1">
+    <If sap:VirtualizedContainerService.HintSize="970,640" sap2010:WorkflowViewState.IdRef="If_1">
       <If.Condition>
         <InArgument x:TypeArguments="x:Boolean">
           <CSharpValue x:TypeArguments="x:Boolean" sap2010:WorkflowViewState.IdRef="CSharpValue`1_6">count.Rows.Count&gt;0</CSharpValue>
@@ -256,7 +277,7 @@
         </Sequence>
       </If.Else>
     </If>
-    <ui:ExecuteQuery ContinueOnError="{x:Null}" TimeoutMS="{x:Null}" CommandType="Text" DisplayName="Run query" sap:VirtualizedContainerService.HintSize="438,89" sap2010:WorkflowViewState.IdRef="ExecuteQuery_2">
+    <ui:ExecuteQuery ContinueOnError="{x:Null}" TimeoutMS="{x:Null}" CommandType="Text" DisplayName="Run query" sap:VirtualizedContainerService.HintSize="970,89" sap2010:WorkflowViewState.IdRef="ExecuteQuery_2">
       <ui:ExecuteQuery.DataTable>
         <OutArgument x:TypeArguments="sd:DataTable">
           <CSharpReference x:TypeArguments="sd:DataTable" sap2010:WorkflowViewState.IdRef="CSharpReference`1_4">count_master</CSharpReference>
@@ -277,7 +298,7 @@
         </InArgument>
       </ui:ExecuteQuery.Sql>
     </ui:ExecuteQuery>
-    <If sap:VirtualizedContainerService.HintSize="438,640" sap2010:WorkflowViewState.IdRef="If_2">
+    <If sap:VirtualizedContainerService.HintSize="970,640" sap2010:WorkflowViewState.IdRef="If_2">
       <If.Condition>
         <InArgument x:TypeArguments="x:Boolean">
           <CSharpValue x:TypeArguments="x:Boolean" sap2010:WorkflowViewState.IdRef="CSharpValue`1_12">count_master.Rows.Count&gt;0</CSharpValue>
@@ -326,7 +347,7 @@
         </Sequence>
       </If.Else>
     </If>
-    <TryCatch DisplayName="Try Catch" sap:VirtualizedContainerService.HintSize="438,317" sap2010:WorkflowViewState.IdRef="TryCatch_1">
+    <TryCatch DisplayName="Try Catch" sap:VirtualizedContainerService.HintSize="970,317" sap2010:WorkflowViewState.IdRef="TryCatch_1">
       <TryCatch.Try>
         <ui:ExecuteQuery ContinueOnError="{x:Null}" ExistingDbConnection="{x:Null}" TimeoutMS="{x:Null}" CommandType="Text" ConnectionString="Data Source=192.168.2.231;Initial Catalog=Working_ZephyrMaster;Persist Security Info=True;User ID=medicaresqluser;Password=kantime_123;Max Pool Size=500;Encrypt=False" DisplayName="Run query" sap:VirtualizedContainerService.HintSize="334,89" sap2010:WorkflowViewState.IdRef="ExecuteQuery_3" ProviderName="Microsoft.Data.SqlClient" Sql="select * from sys.tables">
           <ui:ExecuteQuery.DataTable>
@@ -366,7 +387,7 @@
         </Catch>
       </TryCatch.Catches>
     </TryCatch>
-    <If sap:VirtualizedContainerService.HintSize="438,411" sap2010:WorkflowViewState.IdRef="If_4">
+    <If sap:VirtualizedContainerService.HintSize="970,411" sap2010:WorkflowViewState.IdRef="If_4">
       <If.Condition>
         <InArgument x:TypeArguments="x:Boolean">
           <CSharpValue x:TypeArguments="x:Boolean" sap2010:WorkflowViewState.IdRef="CSharpValue`1_41">k2 != null</CSharpValue>
@@ -397,17 +418,44 @@
         <Sequence sap2010:WorkflowViewState.IdRef="Sequence_15" />
       </If.Else>
     </If>
-    <ui:DatabaseConnect DisplayName="Connect to database" sap:VirtualizedContainerService.HintSize="438,60" sap2010:WorkflowViewState.IdRef="DatabaseConnect_2" ProviderName="Microsoft.Data.SqlClient" ConnectionString="Data Source=192.168.4.12;Initial Catalog=ProdQA_ZephyrMaster;Persist Security Info=True;User ID=medicaresqluser;Password=kantime_123;Max Pool Size=500;">
+    <ui:DatabaseConnect DisplayName="Connect to database" sap:VirtualizedContainerService.HintSize="970,60" sap2010:WorkflowViewState.IdRef="DatabaseConnect_2" ProviderName="Microsoft.Data.SqlClient" ConnectionString="Data Source=192.168.4.12;Initial Catalog=ProdQA_ZephyrMaster;Persist Security Info=True;User ID=medicaresqluser;Password=kantime_123;Max Pool Size=500;">
       <ui:DatabaseConnect.DatabaseConnection>
         <OutArgument x:TypeArguments="ui:DatabaseConnection">
           <CSharpReference x:TypeArguments="ui:DatabaseConnection" sap2010:WorkflowViewState.IdRef="CSharpReference`1_6">connect</CSharpReference>
         </OutArgument>
       </ui:DatabaseConnect.DatabaseConnection>
     </ui:DatabaseConnect>
-    <ui:InvokeCode ContinueOnError="{x:Null}" Code="var client = new MongoClient(&quot;mongodb://mvvuser:QXWH7GbMRVSg3FM4q@192.168.5.5:27017&quot;);&#xA; Console.WriteLine(&quot;Client is = &quot;+client);&#xA;int count=0;&#xA; var databases = client.ListDatabases().ToList();&#xA;        foreach (var db in databases)&#xA;        { &#xA;&#x9;&#x9;&#x9;count ++;&#xA;&#x9;&#x9;&#x9;if(count == 10){&#xA;&#x9;&#x9;&#x9;&#x9;break;&#xA;&#x9;&#x9;&#x9;}&#xA;             var databaseName = db[&quot;name&quot;].ToString();&#xA;            //Console.WriteLine(&quot;Database: &quot; + databaseName);&#xA;&#xA;            var database = client.GetDatabase(databaseName);&#xA;            var collectionNames = database.ListCollectionNames().ToList();&#xA;&#x9;&#x9;&#x9;&#xA;            foreach (var collectionName in collectionNames)&#xA;            {&#xA;                var collection = database.GetCollection&lt;BsonDocument&gt;(collectionName);&#xA;                var totalCount = collection.CountDocuments(new BsonDocument());&#xA;&#xA;                //Console.WriteLine(&quot;  Collection: &quot; + collectionName);&#xA;                //Console.WriteLine(&quot;    Total Count: &quot; + totalCount);&#xA;&#x9;&#x9;&#x9;&#x9;if(totalCount&gt;0)&#xA;&#x9;&#x9;&#x9;&#x9;{&#xA;&#x9;&#x9;&#x9;&#x9;&#x9;Console.WriteLine(collectionName +&quot; has &quot; + totalCount + &quot; records,DB test is passed&quot;);&#xA;&#x9;&#x9;&#x9;&#x9;} &#xA;&#x9;&#x9;&#x9;&#x9;else&#xA;&#x9;&#x9;&#x9;&#x9;{&#xA;&#x9;&#x9;&#x9;&#x9;&#x9;Console.WriteLine(collectionName + &quot; DB test is failed&quot;);&#xA;&#x9;&#x9;&#x9;&#x9;&#x9;&#xA;&#x9;&#x9;&#x9;&#x9;&#x9;LogMessage(&quot;Error&quot;,collectionName + &quot; DB test is failed&quot;);&#xA;&#x9;&#x9;&#x9;&#x9;}&#xA;            }&#xA;        }&#xA;&#xA;void LogMessage(string level, string message)&#xA;{&#xA;    Console.WriteLine(level + &quot;: &quot; + message);&#xA;}" DisplayName="Invoke Code" sap:VirtualizedContainerService.HintSize="438,165" sap2010:WorkflowViewState.IdRef="InvokeCode_1" Language="CSharp">
+    <ui:InvokeCode ContinueOnError="{x:Null}" Code="var client = new MongoClient(&quot;mongodb://mvvuser:QXWH7GbMRVSg3FM4q@192.168.5.5:27017&quot;);&#xA; Console.WriteLine(&quot;Client is = &quot;+client);&#xA;int count=0;&#xA; var databases = client.ListDatabases().ToList();&#xA;        foreach (var db in databases)&#xA;        { &#xA;&#x9;&#x9;&#x9;count ++;&#xA;&#x9;&#x9;&#x9;if(count == 10){&#xA;&#x9;&#x9;&#x9;&#x9;break;&#xA;&#x9;&#x9;&#x9;}&#xA;             var databaseName = db[&quot;name&quot;].ToString();&#xA;            //Console.WriteLine(&quot;Database: &quot; + databaseName);&#xA;&#xA;            var database = client.GetDatabase(databaseName);&#xA;            var collectionNames = database.ListCollectionNames().ToList();&#xA;&#x9;&#x9;&#x9;&#xA;            foreach (var collectionName in collectionNames)&#xA;            {&#xA;                var collection = database.GetCollection&lt;BsonDocument&gt;(collectionName);&#xA;                var totalCount = collection.CountDocuments(new BsonDocument());&#xA;&#xA;                //Console.WriteLine(&quot;  Collection: &quot; + collectionName);&#xA;                //Console.WriteLine(&quot;    Total Count: &quot; + totalCount);&#xA;&#x9;&#x9;&#x9;&#x9;if(totalCount&gt;0)&#xA;&#x9;&#x9;&#x9;&#x9;{&#xA;&#x9;&#x9;&#x9;&#x9;&#x9;Console.WriteLine(collectionName +&quot; has &quot; + totalCount + &quot; records,DB test is passed&quot;);&#xA;&#x9;&#x9;&#x9;&#x9;} &#xA;&#x9;&#x9;&#x9;&#x9;else&#xA;&#x9;&#x9;&#x9;&#x9;{&#xA;&#x9;&#x9;&#x9;&#x9;&#x9;Console.WriteLine(collectionName + &quot; DB test is failed&quot;);&#xA;&#x9;&#x9;&#x9;&#x9;&#x9;&#xA;&#x9;&#x9;&#x9;&#x9;&#x9;LogMessage(&quot;Error&quot;,collectionName + &quot; DB test is failed&quot;);&#xA;&#x9;&#x9;&#x9;&#x9;}&#xA;            }&#xA;        }&#xA;&#xA;void LogMessage(string level, string message)&#xA;{&#xA;    Console.WriteLine(level + &quot;: &quot; + message);&#xA;}" DisplayName="Invoke Code" sap:VirtualizedContainerService.HintSize="970,165" sap2010:WorkflowViewState.IdRef="InvokeCode_1" Language="CSharp">
       <ui:InvokeCode.Arguments>
         <scg:Dictionary x:TypeArguments="x:String, Argument" />
       </ui:InvokeCode.Arguments>
     </ui:InvokeCode>
+    <uast:SplitText DisplayName="Split Text" sap:VirtualizedContainerService.HintSize="970,216" sap2010:WorkflowViewState.IdRef="SplitText_1" Separator="/" SeparatorKey="Custom" Source="Private/192.168.2.231/Working_Zephyr4">
+      <uast:SplitText.Results>
+        <OutArgument x:TypeArguments="scg:IEnumerable(x:String)">
+          <CSharpReference x:TypeArguments="scg:IEnumerable(x:String)" sap2010:WorkflowViewState.IdRef="CSharpReference`1_7">test2</CSharpReference>
+        </OutArgument>
+      </uast:SplitText.Results>
+    </uast:SplitText>
+    <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="970,90" sap2010:WorkflowViewState.IdRef="WriteLine_2">
+      <InArgument x:TypeArguments="x:String">
+        <CSharpValue x:TypeArguments="x:String" sap2010:WorkflowViewState.IdRef="CSharpValue`1_45">test2.ElementAt(0)</CSharpValue>
+      </InArgument>
+    </WriteLine>
+    <ui:ModifyText OutputText="{x:Null}" DisplayName="Modify Text" sap:VirtualizedContainerService.HintSize="970,502" sap2010:WorkflowViewState.IdRef="ModifyText_1" SourceText="Data Source=$SERVER_NAME$;Initial Catalog=$DATABASE_NAME$;Persist Security Info=True;User ID=medicaresqluser;Password=kantime_123;Max Pool Size=500;">
+      <ui:ModifyText.Body>
+        <ActivityAction>
+          <Sequence DisplayName="Do" sap2010:WorkflowViewState.IdRef="Sequence_17">
+            <sap:WorkflowViewStateService.ViewState>
+              <scg:Dictionary x:TypeArguments="x:String, x:Object">
+                <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+              </scg:Dictionary>
+            </sap:WorkflowViewStateService.ViewState>
+            <ucat:FindAndReplaceTextModification DisplayName="Find and replace text" sap:VirtualizedContainerService.HintSize="918,149" sap2010:WorkflowViewState.IdRef="FindAndReplaceTextModification_1" MatchCase="True" ReplaceText="test1" SearchText="$SERVER_NAME$" />
+            <ucat:FindAndReplaceTextModification DisplayName="Find and replace text" sap:VirtualizedContainerService.HintSize="918,149" sap2010:WorkflowViewState.IdRef="FindAndReplaceTextModification_2" MatchCase="True" ReplaceText="test2" SearchText="$DATABASE_NAME$" />
+          </Sequence>
+        </ActivityAction>
+      </ui:ModifyText.Body>
+    </ui:ModifyText>
   </Sequence>
 </Activity>
